fix(audio-call): stretch game to full page height

--- a/src/pages/audioCallGame/components/AudioCallGame/index.scss
+++ b/src/pages/audioCallGame/components/AudioCallGame/index.scss
@@ -1,7 +1,9 @@
 $textColor: #ffffff;
 
 .audio-call-game {
-  position: relative;
+  position: absolute;
+  min-height: 100%;
+  width: 100%;
   flex: 1;
   align-self: stretch;
   display: flex;
